[gd_scene load_steps=2 format=2]

[ext_resource path="res://code/prestige/prestige.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 750.0
offset_bottom = 750.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BBack" type="Button" parent="VBoxContainer"]
offset_right = 42.0
offset_bottom = 20.0
size_flags_horizontal = 0
text = "Back"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
offset_top = 24.0
offset_right = 750.0
offset_bottom = 385.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer2"]
offset_left = 335.0
offset_top = 152.0
offset_right = 415.0
offset_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LPres" type="Label" parent="VBoxContainer/CenterContainer2/VBoxContainer"]
offset_right = 80.0
offset_bottom = 14.0
text = "Prestige:"
align = 1
valign = 1

[node name="BPrestige" type="Button" parent="VBoxContainer/CenterContainer2/VBoxContainer"]
offset_left = 8.0
offset_top = 18.0
offset_right = 72.0
offset_bottom = 38.0
size_flags_horizontal = 4
text = "Prestige"

[node name="LReq" type="Label" parent="VBoxContainer/CenterContainer2/VBoxContainer"]
offset_top = 42.0
offset_right = 80.0
offset_bottom = 56.0
text = "Required xp:"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
offset_top = 389.0
offset_right = 750.0
offset_bottom = 750.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BShop" type="Button" parent="VBoxContainer/CenterContainer"]
offset_left = 325.0
offset_top = 170.0
offset_right = 424.0
offset_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Prestige Shop"

[connection signal="pressed" from="VBoxContainer/BBack" to="." method="_on_BBack_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/VBoxContainer/BPrestige" to="." method="_on_BPrestige_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/BShop" to="." method="_on_BShop_pressed"]
